--- a/ng-fundamentals/src/app/events/event-details.component.html
+++ b/ng-fundamentals/src/app/events/event-details.component.html
@@ -1,14 +1,29 @@
-<div>
-  <div style="margin-top:30px">
-    Event: {{event.name}}
+<div class="outer">
+  <div class="inner event-label">
+    Event: 
+  </div>
+  <div class="event-label">
+    Date: 
+  </div>
+  <div class="event-label">
+    Time: 
+  </div>
+  <div class="event-label">
+    Address: 
+  </div>
+</div>
+
+<div class="outer values">
+  <div class="inner">
+    {{event.name}}
   </div>
   <div>
-    Date: {{event.date}}
+    {{event.date}}
   </div>
   <div>
-    Time: {{event.time}}
+    {{event.time}}
   </div>
   <div>
-    Address: <event-address [address]="event.location"></event-address>
+    <event-address [address]="event.location"></event-address>
   </div>
 </div>
