--- a/ng-fundamentals/src/app/events/events-list.component.html
+++ b/ng-fundamentals/src/app/events/events-list.component.html
@@ -8,14 +8,18 @@
       <th>Date</th>
       <th>Time</th>
       <th>Address</th>
+      <th>City</th>
+      <th>Country</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let event of events">
-      <td>{{event.name}}</td>
-      <td>{{event.date}} </td>
-      <td>{{event.time}}</td>
-      <td>{{event.location.address}}, {{event.location.city}}, {{event.location.country}}</td>
+      <td>{{event?.name}}</td>
+      <td>{{event?.date}} </td>
+      <td>{{event?.time}}</td>
+      <td>{{event?.location?.address}}</td>
+      <td>{{event?.location?.city}}</td>
+      <td>{{event?.location?.country}}</td>
     </tr>
     </tbody>
   </table>
