--- a/ng-fundamentals/src/app/events/events-list.component.html
+++ b/ng-fundamentals/src/app/events/events-list.component.html
@@ -1,27 +1,16 @@
 <div>
-  <h3>All of the events should show below</h3>
-
-  <table>
-    <thead>
-    <tr>
-      <th>Event</th>
-      <th>Date</th>
-      <th>Time</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Country</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let event of events">
-      <td>{{event?.name}}</td>
-      <td>{{event?.date}} </td>
-      <td>{{event?.time}}</td>
-      <td>{{event?.location?.address}}</td>
-      <td>{{event?.location?.city}}</td>
-      <td>{{event?.location?.country}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <div *ngFor="let event of events" class="well hoverwell thumbnail">
+    <h2>{{event.name}}</h2>
+    <span *ngIf="!event.location && event.onlineUrl" class="label label-warning">Online Only</span>
+    <div>Date: {{event.date}}</div>
+    <div>Time: {{event.time}}</div>
+    <div *ngIf="event.location">
+      <span>Location: {{event?.location?.address}}</span>
+      <span class="pad-left">{{event?.location?.city}}, {{event?.location?.country}}</span>
+    </div>
+    <div *ngIf="event.onlineUrl">
+      Online URL: {{event?.onlineUrl}}
+    </div>
+  </div>
 
 </div>
