--- a/ng-fundamentals/src/app/events/events-list.component.html
+++ b/ng-fundamentals/src/app/events/events-list.component.html
@@ -1,7 +1,9 @@
 <div>
+  <div class="legend">
+    <span class="in-person">In Person</span> <span class="online">Online</span> <span class="tbd">TBD</span>
+  </div>
   <div *ngFor="let event of events" class="well hoverwell thumbnail">
-    <h2>{{event.name}}</h2>
-    <span *ngIf="!event.location && event.onlineUrl" class="label label-warning">Online Only</span>
+    <h2 [ngClass]="getTitleClass(event.format)">{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
     <div>Time: {{event.time}}</div>
     <div *ngIf="event.location">
