--- a/ng-fundamentals/src/app/events/events-list.component.html
+++ b/ng-fundamentals/src/app/events/events-list.component.html
@@ -4,7 +4,7 @@
     <span class="in-person">In Person</span> <span class="online">Online</span> <span class="hybrid">Hybrid</span> <span class="tbd">TBD</span>
   </div>
   <div *ngFor="let event of events" class="well hoverwell thumbnail">
-    <h2 [ngClass]="eventService.getTitleClass(event)">{{event.name}}</h2>
+    <h2 [ngClass]="eventService.getTitleClass(event)"><a [routerLink]="['events', event.id]">{{event.name}}</a></h2>
     <div>Date: {{event.date}}</div>
     <div>Time: {{event.time}}</div>
     <div *ngIf="event.location">
