--- a/ng-fundamentals/src/app/events/event-details/event-details.component.html
+++ b/ng-fundamentals/src/app/events/event-details/event-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image" />
-
+  <div [routerLink]="['/events']" ><a class="hover-pointer">< Go Back</a></div>
   <div class="row">
     <div class="col-md-11">
       <h2>{{event?.name}} </h2>
