Example of decativating a form

--- a/ng-fundamentals/src/app/events/event-details/event-details.component.html
+++ b/ng-fundamentals/src/app/events/event-details/event-details.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image" />
-  <div [routerLink]="['/events']" ><a class="hover-pointer">< Go Back</a></div>
+  <h4>Event Details</h4>
+  <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image"/>
+  <div [routerLink]="['/events']"><a class="hover-pointer">< Go Back</a></div>
   <div class="row">
     <div class="col-md-11">
       <h2>{{event?.name}} </h2>
@@ -15,8 +16,8 @@
     </div>
     <div class="col-md-6">
       <address>
-        <strong>Address:</strong><br />
-        {{event?.location?.address}}<br />
+        <strong>Address:</strong><br/>
+        {{event?.location?.address}}<br/>
         {{event?.location?.city}}, {{event?.location?.country}}
       </address>
     </div>
