--- a/ng-fundamentals/src/app/nav/nav-bar.component.html
+++ b/ng-fundamentals/src/app/nav/nav-bar.component.html
@@ -26,7 +26,7 @@
         <ul class="nav navbar-nav">
           <li>
             <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']">Login</a>
-            <a *ngIf="auth.isAuthenticated()" [routerLink]="['user/profile']">Welcome {{auth.currentUser.firstName}}</a>
+            <a *ngIf="auth.isAuthenticated()" [routerLink]="['user/profile']">Welcome {{auth.getLoggedInUser().firstName}}</a>
           </li>
         </ul>
       </div>
