--- a/ng-fundamentals/src/app/user/login.component.html
+++ b/ng-fundamentals/src/app/user/login.component.html
@@ -4,14 +4,17 @@
   <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
     <div class="form-group">
       <label for="userName">User Name:</label>
-      <input (ngModel)="userName" id="userName" name="userName" type="text" class="form-control" placeholder="User Name..." />
+      <em *ngIf="(loginForm.controls.userName?.invalid && loginForm.controls.userName?.touched) || mouseoverLogin" class="required">Required</em>
+      <input (ngModel)="userName" required id="userName" name="userName" type="text" class="form-control" placeholder="User Name..." />
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <input (ngModel)="password" id="password" name="password" type="password" class="form-control" placeholder="Password..." />
+      <em *ngIf="(loginForm.controls.password?.invalid && loginForm.controls.password?.touched) || mouseoverLogin" class="required">Required</em>
+      <input (ngModel)="password" required id="password" name="password" type="password" class="form-control" placeholder="Password..." />
     </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
+    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
+      <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
+    </span>
     <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </form>
 </div>
